--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,12 @@
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: "PlayfairDisplay";
+  src: url("./fonts/PlayfairDisplay-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
 
 :root {
   --background: #ffffff;
